--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>3d example using three.js and multiple windows</title>
+	<title>Window-3D Scene</title>
 	<script type="text/javascript" src="three.r124.min.js"></script>
 	<style type="text/css">
 		
